<resources>
    <string name="app_name">Question2</string>

    <string name="total_amount">Total Amount = \u20B9 %s</string>
    <string name="payments">Payments</string>
    <string name="add_payment">Add Payment</string>
    <string name="payment_chip">%s: Rs. %.2f</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="provider">Provider (ICICI, Citibank, etc.)</string>
    <string name="transaction_reference">Transaction Reference</string>
    <string name="cash">Cash</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="credit_card">Credit Card</string>
    <string name="inr_symbol">\u20B9</string>
    <string name="saved">Saved!</string>
</resources>