<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inr_symbol"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:hint="@string/amount"
            android:textSize="16sp"
            android:padding="10dp"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/etProvider"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:hint="@string/provider"
        android:padding="10dp"
        android:textSize="16sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/etReference"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:hint="@string/transaction_reference"
        android:padding="10dp"
        android:textSize="16sp"
        android:visibility="gone"/>

</LinearLayout>