<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPayments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="20dp"
        android:text="@string/payments"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:textSize="20sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"/>

    <TextView
        android:id="@+id/tvAddPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/add_payment"
        android:textColor="@color/bright_blue"
        android:textSize="20sp"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:strokeColor="@android:color/black"
        android:textColor="@android:color/black"
        app:backgroundTint="@android:color/darker_gray"
        android:layout_gravity="center_horizontal"
        app:cornerRadius="10dp"
        app:strokeWidth="2dp"
        android:text="@string/save"
        android:textSize="20sp"/>

</LinearLayout>